// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders for error 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "marginTop": 32,
      "paddingHorizontal": 16,
    }
  }
  testID="NoActivity/error"
>
  <Text
    style={
      Object {
        "color": "#757575",
        "fontFamily": "Inter-Regular",
        "fontSize": 18,
        "lineHeight": 24,
      }
    }
  >
    errorLoadingActivity.0
  </Text>
  <Text
    style={
      Object {
        "color": "#757575",
        "fontFamily": "Inter-Regular",
        "fontSize": 18,
        "lineHeight": 24,
      }
    }
  >
    errorLoadingActivity.1
  </Text>
</View>
`;

exports[`renders for loading 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "marginTop": 32,
      "paddingHorizontal": 16,
    }
  }
>
  <ActivityIndicator
    color="#42D689"
    size="large"
    style={
      Object {
        "height": 108,
        "marginVertical": 20,
        "width": 108,
      }
    }
    testID="NoActivity/loading"
  />
  <Text
    style={
      Object {
        "color": "#757575",
        "fontFamily": "Inter-Regular",
        "fontSize": 18,
        "lineHeight": 24,
      }
    }
  >
    noTransactionActivity
     
  </Text>
</View>
`;

exports[`renders for no transactions 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "marginTop": 32,
      "paddingHorizontal": 16,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#757575",
        "fontFamily": "Inter-Regular",
        "fontSize": 18,
        "lineHeight": 24,
      }
    }
  >
    noTransactionActivity
     
  </Text>
</View>
`;

exports[`renders for transactions 1`] = `
<RCTScrollView
  data={
    Array [
      Object {
        "data": Array [
          Object {
            "__typename": "TokenTransfer",
            "account": "0x00000000000000000000",
            "address": "0x00000000000000000000",
            "amount": Object {
              "currencyCode": "cUSD",
              "localAmount": null,
              "value": "100",
            },
            "comment": "test",
            "defaultImage": "test",
            "defaultName": "test",
            "hash": "0x00000000000000000000",
            "status": "Complete",
            "timestamp": 1542306118,
            "type": "RECEIVED",
          },
        ],
        "title": "undefined",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  keyboardShouldPersistTaps="always"
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  testID="TransactionList"
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            undefined,
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#666666",
              "fontFamily": "Inter-Medium",
              "fontSize": 13,
              "lineHeight": 16,
            }
          }
        >
          undefined
        </Text>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        focusable={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingHorizontal": 16,
              "paddingVertical": 12,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "column",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    Object {
                      "backgroundColor": "hsl(0, 53%, 93%)",
                      "borderRadius": 20,
                      "height": 40,
                      "width": 40,
                    },
                  ]
                }
              >
                <Image
                  resizeMode="cover"
                  source={
                    Object {
                      "uri": "test",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "alignSelf": "center",
                        "margin": "auto",
                      },
                      Object {
                        "borderRadius": 20,
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                />
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "marginLeft": 16,
              }
            }
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "marginTop": -1,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#2E3338",
                    "flexShrink": 1,
                    "fontFamily": "Inter-Medium",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                feedItemReceivedTitle, {"displayName":"test"}
              </Text>
              <Text
                style={
                  Array [
                    Array [
                      Object {
                        "color": "#2E3338",
                        "flexWrap": "wrap",
                        "fontFamily": "Inter-Medium",
                        "fontSize": 16,
                        "lineHeight": 22,
                        "marginLeft": "auto",
                        "paddingLeft": 10,
                        "textAlign": "right",
                        "width": "40%",
                      },
                      Object {
                        "color": "#1AB775",
                      },
                    ],
                    Object {
                      "color": "#1AB775",
                    },
                  ]
                }
                testID="FeedItemAmountDisplay/value"
              >
                +
                ₱
                133.00
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#666666",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 14,
                  "lineHeight": 18,
                  "paddingTop": 2,
                }
              }
            >
              feedItemReceivedInfo, {"context":null,"comment":"test"}
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    />
  </View>
</RCTScrollView>
`;
